--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "normalize.css": "~3.0.2",
-    "angular": "~1.3.8"
+    "angular": "~1.3.8",
+    "lodash": "~2.4.1",
+    "font-awesome": "~4.2.0"
   }
 }
